create header, dropdown menu and banner

--- a/index.html
+++ b/index.html
@@ -10,17 +10,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700;800&family=Lexend:wght@300;500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/src/css/index.css">
+    <script defer src="/src/js/index.js"></script>
 </head>
 <body>
     <div class="banner">
         <div class="header">
-            <image class="logo" src="/components/icons/logo.svg" alt="Personal logo, a stylized Ø letter"></image>
+            <img class="logo" src="/components/icons/personal_logo.svg" alt="Personal logo, a stylized Ø letter"></img>
             <div class="header-name">
                 <div>Øystein Røstvik</div>
                 <div>Front-end developer</div>
             </div>
-            <div><p>contact link buttons here</p></div>
+            <div class="socials">
+                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer"><img src="/components/icons/socials/github-mark-small.svg" class="socials-btn" alt="GitHub icon"></img></a>
+                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer"><img src="/components/icons/socials/linkedin.png" class="socials-btn" alt="LinkedIn icon"></img></a>
+                <img src="/components/icons/socials/email-icon.svg" class="socials-btn email-btn" alt="Email icon"></img>
+            </div>
+            <div class="socials-mobile">
+                <img src="/components/icons/arrow.svg" class="socials-btn" id="open-btn" alt="Dropdown menu arrow icon"></img>
+                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer"><img src="/components/icons/socials/github-mark-small.svg" class="socials-btn dropdown" alt="GitHub icon"></img></a>
+                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer"><img src="/components/icons/socials/linkedin.png" class="socials-btn dropdown" alt="LinkedIn icon"></img></a>
+                <img src="/components/icons/socials/email-icon.svg" class="socials-btn dropdown email-btn" alt="Email icon"></img>
+                <img src="/components/icons/arrow.svg" class="socials-btn dropdown" id="close-btn" alt="Dropdown menu arrow icon"></img>
+            </div>
         </div>
+        <div class="btn-div"><button class="about-btn">About me</button></div>
     </div>
     <main>
         <p>projects will be here</p>
