--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Øystein Røstvik</title>
-    <link rel="icon" type="image/x-icon" href="/components/icons/favico.svg">
+    <link rel="icon" type="image/x-icon" href="components/icons/favico.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700;800&family=Lexend:wght@300;500&display=swap" rel="stylesheet"> 
@@ -23,16 +23,16 @@
                 </div>
             </div>
             <div class="socials">
-                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer" title="GitHub account"><img src="/components/icons/socials/github-mark-small.svg" class="socials-btn" alt="GitHub icon"></img></a>
-                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer" title="LinkedIn account"><img src="/components/icons/socials/linkedin.png" class="socials-btn" alt="LinkedIn icon"></img></a>
-                <img src="/components/icons/socials/email-icon-big.svg" class="socials-btn email-btn" alt="Email icon, click to copy email address" tabindex="0" title="Email address"></img>
+                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer" title="GitHub account"><img src="components/icons/socials/github-mark-small.svg" class="socials-btn" alt="GitHub icon"></img></a>
+                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer" title="LinkedIn account"><img src="components/icons/socials/linkedin.png" class="socials-btn" alt="LinkedIn icon"></img></a>
+                <img src="components/icons/socials/email-icon-big.svg" class="socials-btn email-btn" alt="Email icon, click to copy email address" tabindex="0" title="Email address"></img>
             </div>
             <div class="socials-mobile">
-                <img src="/components/icons/arrow.svg" class="socials-btn" id="open-btn" alt="Open dropdown menu" tabindex="0" title="Open"></img>
-                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer" title="GitHub account"><img src="/components/icons/socials/github-mark-small.svg" class="socials-btn dropdown" alt="GitHub icon"></img></a>
-                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer" title="LinkedIn account"><img src="/components/icons/socials/linkedin.png" class="socials-btn dropdown" alt="LinkedIn icon"></img></a>
-                <img src="/components/icons/socials/email-icon-big.svg" class="socials-btn dropdown email-btn" alt="Email icon, click to copy email address" title="Email address" tabindex="0"></img>
-                <img src="/components/icons/arrow.svg" class="socials-btn dropdown" id="close-btn" alt="Close dropdown menu" tabindex="0" title="Close"></img>
+                <img src="components/icons/arrow.svg" class="socials-btn" id="open-btn" alt="Open dropdown menu" tabindex="0" title="Open"></img>
+                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer" title="GitHub account"><img src="components/icons/socials/github-mark-small.svg" class="socials-btn dropdown" alt="GitHub icon"></img></a>
+                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer" title="LinkedIn account"><img src="components/icons/socials/linkedin.png" class="socials-btn dropdown" alt="LinkedIn icon"></img></a>
+                <img src="components/icons/socials/email-icon-big.svg" class="socials-btn dropdown email-btn" alt="Email icon, click to copy email address" title="Email address" tabindex="0"></img>
+                <img src="components/icons/arrow.svg" class="socials-btn dropdown" id="close-btn" alt="Close dropdown menu" tabindex="0" title="Close"></img>
             </div>
         </div>
         <p class="hidden" id="email-copy-txt">Email copied!</p>
