create About Me modal

--- a/index.html
+++ b/index.html
@@ -11,36 +11,87 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700;800&family=Lexend:wght@300;500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="src/css/index.css">
     <script defer src="src/js/index.js"></script>
+    <script defer src="src/js/dropdown_menu.js"></script>
+    <script defer src="src/js/modal.js"></script>
 </head>
 <body>
+    <div id="modal-container">
+        <div id="modal">
+            <button class="close-modal" id="close-modal-btn">&times;</button>
+            <div class="modal-top">
+                <h1>ØYSTEIN RØSTVIK</h1>
+                <img id="portrait" src="components/images/portrait.webp" alt="Portrait image of Øystein Røstvik">
+            </div>
+            <div class="modal-middle">
+                <p class="txt-margin">Hello, I’m a 24 year old student from Tromsø currently living in Kristiansand 😀</p>
+                <p class="txt-margin">I study Front-end Development at Noroff Higher Vocational College.</p>
+                <p>I have experience designing websites and building them using HTML, CSS, JavaScript and APIs.</p>
+            </div>
+            <div class="modal-bottom">
+                <div id="box-container">
+                    <div id="box-row-1">
+                        <div id="box-1">
+                            <h3>Planning</h3>
+                            <p>Kanban board</p>
+                            <p>Gantt chart</p>
+                        </div>
+                        <div id="box-3">
+                            <h3>Designing</h3>
+                            <p>Figma</p>
+                            <p>Adobe Xd</p>
+                            <p>Adobe Illustrator</p>
+                        </div>
+                    </div>
+                    <div id="box-row-2">
+                        <div id="box-2">
+                            <h3>Coding</h3>
+                            <p>HTML</p>
+                            <p>CSS</p>
+                            <p>JavaScript</p>
+                            <p>Bootstrap</p>
+                            <p>React</p>
+                        </div>
+                        <div id="box-4">
+                            <h3>Headless CMS</h3>
+                            <p>Wordpress</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="close-modal" id="modal-background"></div>
+    </div>
     <div class="banner">
         <div class="header">
             <div class="logo-full">
-                <img class="logo" src="components/icons/personal_logo.svg" alt="Personal logo, a stylized Ø letter"></img>
+                <img class="logo" src="components/icons/personal_logo.svg" alt="Personal logo, a stylized Ø letter">
                 <div class="header-name">
                     <div>Øystein Røstvik</div>
                     <div>Front-end developer</div>
                 </div>
             </div>
             <div class="socials">
-                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer" title="GitHub account"><img src="components/icons/socials/github-mark-small.svg" class="socials-btn" alt="GitHub icon"></img></a>
-                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer" title="LinkedIn account"><img src="components/icons/socials/linkedin.png" class="socials-btn" alt="LinkedIn icon"></img></a>
-                <img src="components/icons/socials/email-icon-big.svg" class="socials-btn email-btn" alt="Email icon, click to copy email address" tabindex="0" title="Email address"></img>
+                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer" title="GitHub account"><img src="components/icons/socials/github-mark-small.svg" class="socials-btn" alt="GitHub icon"></a>
+                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer" title="LinkedIn account"><img src="components/icons/socials/linkedin.png" class="socials-btn" alt="LinkedIn icon"></a>
+                <img src="components/icons/socials/email-icon-big.svg" class="socials-btn email-btn" alt="Email icon, click to copy email address" tabindex="0" title="Email address">
             </div>
             <div class="socials-mobile">
-                <img src="components/icons/arrow.svg" class="socials-btn" id="open-btn" alt="Open dropdown menu" tabindex="0" title="Open"></img>
-                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer" title="GitHub account"><img src="components/icons/socials/github-mark-small.svg" class="socials-btn dropdown" alt="GitHub icon"></img></a>
-                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer" title="LinkedIn account"><img src="components/icons/socials/linkedin.png" class="socials-btn dropdown" alt="LinkedIn icon"></img></a>
-                <img src="components/icons/socials/email-icon-big.svg" class="socials-btn dropdown email-btn" alt="Email icon, click to copy email address" title="Email address" tabindex="0"></img>
-                <img src="components/icons/arrow.svg" class="socials-btn dropdown" id="close-btn" alt="Close dropdown menu" tabindex="0" title="Close"></img>
+                <img src="components/icons/arrow.svg" class="socials-btn" id="open-btn" alt="Open dropdown menu" tabindex="0" title="Open">
+                <a href="https://github.com/Tanix98" target="_blank" rel="noopener noreferrer" title="GitHub account" class="dropdown"><img src="components/icons/socials/github-mark-small.svg" class="socials-btn" alt="GitHub icon"></a>
+                <a href="https://www.linkedin.com/in/oystein-rostvik/" target="_blank" rel="noopener noreferrer" title="LinkedIn account" class="dropdown"><img src="components/icons/socials/linkedin.png" class="socials-btn" alt="LinkedIn icon"></a>
+                <img src="components/icons/socials/email-icon-big.svg" class="socials-btn dropdown email-btn" alt="Email icon, click to copy email address" title="Email address" tabindex="0">
+                <img src="components/icons/arrow.svg" class="socials-btn dropdown" id="close-btn" alt="Close dropdown menu arrow icon" tabindex="0" title="Close">
             </div>
         </div>
         <p class="hidden" id="email-copy-txt">Email copied!</p>
-        <div class="btn-div"><button class="about-btn">About me</button></div>
+        <div class="btn-div"><button id="open-modal-btn">About me</button></div>
     </div>
     <main>
-        
+        <div id="projects"></div>
     </main>
-    <footer><p id="copyright-text"></p></footer>
+    <footer>
+        <p id="copyright-text"></p>
+        <p class="email-btn">oysteinrostvik@protonmail.com</p>
+    </footer>
 </body>
 </html>
