--- a/index.html
+++ b/index.html
@@ -87,7 +87,97 @@
         <div class="btn-div"><button id="open-modal-btn">About me</button></div>
     </div>
     <main>
-        <div id="projects"></div>
+        <div id="projects-container">
+            <div class="project">
+                <div class="preview">
+                    <img class="preview-img" src="/components/images/previews/snake-game-preview.webp" alt="Preview image of the Snake Game project">
+                    <div class="img-overlay">
+                        <p class="project-title">Snake Game</p>
+                    </div>
+                </div>
+                <div class="info">
+                    <p class="desc">
+                        A small project made in two days, with the goal of creating a very simple game similar to Snake. Primarily just a fun side project, but it did give me some experience with using the HTML canvas element together with JavaScript. 
+                        <br>
+                        There were more features I could have added, and bugs to fix, but I chose not to spend too much time on it since I don’t plan on becoming a game developer, and I would rather spend time on more front-end focused projects.
+                    </p>
+                    <div class="btns-tags">
+                        <div class="buttons">
+                            <button class="demo-btn">
+                                Hosted demo
+                            </button>
+                            <button class="repo-btn">
+                                GitHub repo
+                            </button>
+                        </div>
+                        <div class="tags">
+                            <p class="tag" title="Tag: HTML">HTML</p>
+                            <p class="tag" title="Tag: CSS">CSS</p>
+                            <p class="tag" title="Tag: JavaScript">JavaScript</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr class="solid">
+            <div class="project reverse">
+                <div class="preview">
+                    <img class="preview-img" src="/components/images/previews/community_science_museum.webp" alt="Preview image of the Community Science museum project">
+                    <div class="img-overlay">
+                        <p class="project-title">Community Science museum</p>
+                    </div>
+                </div>
+                <div class="info">
+                    <p class="desc">
+                        Website made for a Noroff semester project. I further improved my skills in HTML and CSS. I also learned that making all the elements of a page scale with screen sizes was not a good way to make a website responsive. But I was able to make the mobile version look good.
+                    </p>
+                    <div class="btns-tags">
+                        <div class="buttons">
+                            <button class="demo-btn">
+                                Hosted demo
+                            </button>
+                            <button class="repo-btn">
+                                GitHub repo
+                            </button>
+                        </div>
+                        <div class="tags">
+                            <p class="tag" title="Tag: HTML">HTML</p>
+                            <p class="tag" title="Tag: CSS">CSS</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr class="solid">
+            <div class="project">
+                <div class="preview">
+                    <img class="preview-img" src="/components/images/previews/game_hub.webp" alt="Preview image of the GameHub project">
+                    <div class="img-overlay">
+                        <p class="project-title">GameHub</p>
+                    </div>
+                </div>
+                <div class="info">
+                    <p class="desc">
+                        Website made for a Noroff course assignment. It was the very first website I both designed and coded. 
+                        <br>
+                        I learned the basics of setting up a website with HTML and CSS, but I was not able to make it responsive at the time. The games and accounts were also hardcoded in, no API was used. 
+                        Afterwards I focused on figuring out how to make websites responsive for all screen sizes.
+                    </p>
+                    <div class="btns-tags">
+                        <div class="buttons">
+                            <button class="demo-btn">
+                                Hosted demo
+                            </button>
+                            <button class="repo-btn">
+                                GitHub repo
+                            </button>
+                        </div>
+                        <div class="tags">
+                            <p class="tag" title="Tag: HTML">HTML</p>
+                            <p class="tag" title="Tag: CSS">CSS</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <p id="copyright-text"></p>
