create script to reverse flex direction of every second project

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                         <div id="box-4">
                             <h3>Headless CMS</h3>
-                            <p>Wordpress</p>
+                            <p>WordPress</p>
                         </div>
                     </div>
                 </div>
@@ -118,8 +118,8 @@
                     </div>
                 </div>
             </div>
-            <hr class="solid">
-            <div class="project reverse">
+            <hr>
+            <div class="project">
                 <div class="preview">
                     <img class="preview-img" src="components/images/previews/community_science_museum.webp" alt="Preview image of the Community Science museum project">
                     <div class="img-overlay">
@@ -131,7 +131,7 @@
                         Website made for a Noroff semester project. I further improved my skills in HTML and CSS. I also learned that making all the elements of a page scale with screen sizes was not a good way to make a website responsive. But I was able to make the mobile version look good.
                     </p>
                     <div class="btns-tags">
-                        <div class="buttons">
+                        <div class="buttons reverse-btns">
                             <button class="demo-btn">
                                 Hosted demo
                             </button>
@@ -139,14 +139,14 @@
                                 GitHub repo
                             </button>
                         </div>
-                        <div class="tags">
+                        <div class="tags reverse-btns">
                             <p class="tag" title="Tag: HTML">HTML</p>
                             <p class="tag" title="Tag: CSS">CSS</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <hr class="solid">
+            <hr>
             <div class="project">
                 <div class="preview">
                     <img class="preview-img" src="components/images/previews/game_hub.webp" alt="Preview image of the GameHub project">
