improve project descriptions

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     />
                 </div>
             </div>
-            <p class="hidden" id="email-copy-txt">Email copied!</p>
+            <p class="hidden" id="email-copy-txt">Email address copied</p>
             <div id="open-modal-btn-div">
                 <button id="open-modal-btn">About me</button>
             </div>
@@ -208,9 +208,12 @@
                     </a>
                     <div class="info">
                         <p class="desc">
-                            Holidaze is a booking web application made with
-                            React and Bootstrap. Users can register, log in,
-                            create and update bookings and venues.
+                            A booking web app, featuring pagination for the
+                            homepage. Registered users can create bookings, and
+                            venue managers can create venues. The final
+                            assignment at Noroff, it furthered my skills in
+                            React and made me combine everything I had learned
+                            about webdesign, accessibility and coding.
                         </p>
                         <div class="btns-tags">
                             <div class="buttons">
@@ -224,10 +227,9 @@
                             <div class="tags">
                                 <p class="tag" title="Tag">React.js</p>
                                 <p class="tag" title="Tag">Bootstrap</p>
+                                <p class="tag" title="Tag">SASS</p>
+                                <p class="tag" title="Tag">MUI</p>
                                 <p class="tag" title="Tag">Redux Toolkit</p>
-                                <p class="tag" title="Tag">
-                                    react-lazy-load-image-component
-                                </p>
                             </div>
                         </div>
                     </div>
@@ -250,10 +252,11 @@
                     </a>
                     <div class="info">
                         <p class="desc">
-                            An online store using Noroff API. Features a
-                            shopping cart and a search bar with autocomplete
-                            search suggestions.
-                            <br />
+                            An online store with a shopping cart and a search
+                            function with autocomplete search suggestions. The
+                            main focus of this Noroff assignment was learning
+                            React, so the design is mostly just default
+                            Bootstrap.
                         </p>
                         <div class="btns-tags">
                             <div class="buttons">
@@ -292,11 +295,10 @@
                     </a>
                     <div class="info">
                         <p class="desc">
-                            Scandinavian Auction House is an auction website.
-                            Users can register, create listings and bid on them
-                            with credits. Unregistered users can only view
-                            listings.
-                            <br />
+                            An auction website, where registered users can bid
+                            on listings with credits and create their own
+                            listings. This was my last big assignment at Noroff
+                            using pure JavaScript and HTML.
                         </p>
                         <div class="btns-tags">
                             <div class="buttons">
@@ -338,13 +340,6 @@
                             Primarily just a fun side project, but it did give
                             me some experience with using the HTML canvas
                             element together with JavaScript.
-                            <br />
-                            <br />
-                            There were more features I could have added, and
-                            bugs to fix, but I chose not to spend too much time
-                            on it since I don’t plan on becoming a game
-                            developer, and I would rather spend time on more
-                            front-end focused projects.
                         </p>
                         <div class="btns-tags">
                             <div class="buttons">
