change font sizes, improve About Me text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                     &times;
                 </button>
                 <div class="modal-top">
-                    <h1>ØYSTEIN RØSTVIK</h1>
+                    <div class="modal-name">
+                        <h1>ØYSTEIN</h1>
+                        <h1>RØSTVIK</h1>
+                    </div>
                     <img
                         id="portrait"
                         src="src/components/images/portrait.webp"
@@ -46,17 +49,12 @@
                     />
                 </div>
                 <div class="modal-middle">
-                    <p class="txt-margin">
-                        Hello, I’m a 24 year old student from Tromsø currently
-                        living in Kristiansand 😀
-                    </p>
-                    <p class="txt-margin">
-                        I study Front-end Development at Noroff Higher
-                        Vocational College.
-                    </p>
                     <p>
-                        I have experience designing websites and building them
-                        using HTML, CSS, JavaScript and APIs.
+                        Hello, I’m a 24 year old front-end dev from Tromsø 👋
+                        <br />
+                        I've studied Front-end Development at Noroff Higher
+                        Vocational College from 2021-2023, where I learned about
+                        designing and creating web apps.
                     </p>
                 </div>
                 <div class="modal-bottom">
