add dynamic age number to About Me text

--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
                     />
                 </div>
                 <div class="modal-middle">
+                    <p id="first-paragraph"></p>
                     <p>
-                        Hello, I’m a 24 year old front-end dev from Tromsø 👋
-                        <br />
                         I've studied Front-end Development at Noroff Higher
                         Vocational College from 2021-2023, where I learned about
                         designing and creating web apps.
