--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <div class="btns-tags">
                             <div class="buttons">
                                 <button class="demo-btn" id="holidaze-demo-btn">
-                                    Hosted demo
+                                    Live site
                                 </button>
                                 <button class="repo-btn" id="holidaze-repo-btn">
                                     GitHub repo
@@ -258,7 +258,7 @@
                         <div class="btns-tags">
                             <div class="buttons">
                                 <button class="demo-btn" id="tabernia-demo-btn">
-                                    Hosted demo
+                                    Live site
                                 </button>
                                 <button class="repo-btn" id="tabernia-repo-btn">
                                     GitHub repo
@@ -300,7 +300,7 @@
                         <div class="btns-tags">
                             <div class="buttons">
                                 <button class="demo-btn" id="sah-demo-btn">
-                                    Hosted demo
+                                    Live site
                                 </button>
                                 <button class="repo-btn" id="sah-repo-btn">
                                     GitHub repo
@@ -341,7 +341,7 @@
                         <div class="btns-tags">
                             <div class="buttons">
                                 <button class="demo-btn" id="snake-demo-btn">
-                                    Hosted demo
+                                    Live site
                                 </button>
                                 <button class="repo-btn" id="snake-repo-btn">
                                     GitHub repo
