--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 </button>
                             </div>
                             <div class="tags">
-                                <p class="tag" title="Tag">React.js</p>
+                                <p class="tag" title="Tag">React</p>
                                 <p class="tag" title="Tag">Bootstrap</p>
                                 <p class="tag" title="Tag">SASS</p>
                                 <p class="tag" title="Tag">MUI</p>
@@ -265,7 +265,7 @@
                                 </button>
                             </div>
                             <div class="tags">
-                                <p class="tag" title="Tag">React.js</p>
+                                <p class="tag" title="Tag">React</p>
                                 <p class="tag" title="Tag">Bootstrap</p>
                                 <p class="tag" title="Tag">Redux Toolkit</p>
                             </div>
